Make home screen the landing page, portfolio moved to portfolio.html

--- a/game.html
+++ b/game.html
@@ -131,7 +131,7 @@
   </style>
 </head>
 <body>
-  <a class="back-link" href="index.html">← BACK</a>
+  <a class="back-link" href="portfolio.html">← BACK</a>
   <div class="monitor-housing">
     <div class="hud-top">
       <span class="hud-cam">A</span>
