Update header location to 'Based in Toronto, ON'

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
   <header class="home-header">
     <p class="name">Marko Balac</p>
     <p class="header-role">Script Supervisor</p>
-    <p class="header-location">Toronto, ON</p>
+    <p class="header-location">Based in Toronto, ON</p>
   </header>
 
   <main>
