--- a/portfolio.html
+++ b/portfolio.html
@@ -385,7 +385,7 @@
     <div class="header-inner">
       <h1 class="name"><a href="index.html">Marko Balac</a></h1>
       <p class="header-role">Script Supervisor</p>
-      <p class="header-location">Toronto, ON</p>
+      <p class="header-location">Based in Toronto, ON</p>
     </div>
   </header>
 
