Widen about photo, crop from top

--- a/portfolio.html
+++ b/portfolio.html
@@ -156,10 +156,11 @@
 
     /* Photo inside About panel */
     .about-photo {
-      width: 260px;
+      width: 300px;
       height: 346px;
       flex-shrink: 0;
       object-fit: cover;
+      object-position: center bottom;
       display: block;
     }
 
