Rename Series tag to TV Series in credits

--- a/portfolio.html
+++ b/portfolio.html
@@ -457,7 +457,7 @@
             <td>In Character <span class="producer">CFC</span></td><td></td><td>Set PA <span class="producer">Daily</span></td><td><span class="fmt">Short</span></td><td>2019</td>
           </tr>
           <tr class="credits-earlier">
-            <td>Mayday <span class="producer">Season 20</span></td><td></td><td>Set PA <span class="producer">Daily</span></td><td><span class="fmt">Series</span></td><td>2019</td>
+            <td>Mayday <span class="producer">Season 20</span></td><td></td><td>Set PA <span class="producer">Daily</span></td><td><span class="fmt">TV Series</span></td><td>2019</td>
           </tr>
           <tr class="credits-earlier">
             <td>Spinning</td><td></td><td>Set PA <span class="producer">Daily</span></td><td><span class="fmt">Short</span></td><td>2019</td>
@@ -465,30 +465,30 @@
 
           <tr class="credits-group"><td colspan="5">Office Production Assistant</td></tr>
           <tr class="credits-earlier">
-            <td>Utopia Falls</td><td></td><td>Office PA <span class="producer">Daily</span></td><td><span class="fmt">Series</span></td><td>2019</td>
+            <td>Utopia Falls</td><td></td><td>Office PA <span class="producer">Daily</span></td><td><span class="fmt">TV Series</span></td><td>2019</td>
           </tr>
           <tr class="credits-earlier">
-            <td>The Queen's Gambit</td><td></td><td>Office PA <span class="producer">Daily</span></td><td><span class="fmt">Series</span></td><td>2019</td>
+            <td>The Queen's Gambit</td><td></td><td>Office PA <span class="producer">Daily</span></td><td><span class="fmt">TV Series</span></td><td>2019</td>
           </tr>
 
           <tr class="credits-group"><td colspan="5">Location Support Personnel</td></tr>
           <tr class="credits-earlier">
-            <td>Mrs. America</td><td></td><td>Location Support <span class="producer">Daily</span></td><td><span class="fmt">Series</span></td><td>2019</td>
+            <td>Mrs. America</td><td></td><td>Location Support <span class="producer">Daily</span></td><td><span class="fmt">TV Series</span></td><td>2019</td>
           </tr>
           <tr class="credits-earlier">
-            <td>Grand Army</td><td></td><td>Location Support <span class="producer">Daily</span></td><td><span class="fmt">Series</span></td><td>2019</td>
+            <td>Grand Army</td><td></td><td>Location Support <span class="producer">Daily</span></td><td><span class="fmt">TV Series</span></td><td>2019</td>
           </tr>
           <tr class="credits-earlier">
-            <td>Condor <span class="producer">Season 2</span></td><td></td><td>Location Support <span class="producer">Daily</span></td><td><span class="fmt">Series</span></td><td>2019</td>
+            <td>Condor <span class="producer">Season 2</span></td><td></td><td>Location Support <span class="producer">Daily</span></td><td><span class="fmt">TV Series</span></td><td>2019</td>
           </tr>
           <tr class="credits-earlier">
             <td>The Organ Donor</td><td></td><td>Location Support <span class="producer">Daily</span></td><td><span class="fmt">Feature</span></td><td>2019</td>
           </tr>
           <tr class="credits-earlier">
-            <td>Ginny &amp; Georgia</td><td></td><td>Location Support <span class="producer">Daily</span></td><td><span class="fmt">Series</span></td><td>2019</td>
+            <td>Ginny &amp; Georgia</td><td></td><td>Location Support <span class="producer">Daily</span></td><td><span class="fmt">TV Series</span></td><td>2019</td>
           </tr>
           <tr class="credits-earlier">
-            <td>The Boys</td><td></td><td>Location Support <span class="producer">Daily</span></td><td><span class="fmt">Series</span></td><td>2019</td>
+            <td>The Boys</td><td></td><td>Location Support <span class="producer">Daily</span></td><td><span class="fmt">TV Series</span></td><td>2019</td>
           </tr>
         </tbody>
       </table>
