--- a/portfolio.html
+++ b/portfolio.html
@@ -253,32 +253,49 @@
       color: #c8c0b8;
     }
 
-    /* ── Skills ──────────────────────────────────── */
-    .note {
-      font-size: 14px;
-      color: #b0a898;
-      font-style: italic;
-    }
-    .skills-list { max-width: 560px; }
-    .skill-row {
-      display: flex;
-      align-items: baseline;
-      gap: 24px;
-      padding: 14px 0;
-      border-bottom: 1px solid #edeae5;
-    }
-    .skill-row:first-child { border-top: 1px solid #edeae5; }
-    .skill-name {
-      font-size: 14px;
+    /* ── Services ─────────────────────────────────── */
+    .note { font-size: 14px; color: #b0a898; font-style: italic; }
+    .service-phase { margin-bottom: 40px; }
+    .phase-label { margin-bottom: 14px; }
+    .phase-tag {
+      display: inline-block;
+      font-size: 11px;
       font-weight: 700;
-      min-width: 140px;
+      letter-spacing: 0.1em;
+      text-transform: uppercase;
+      padding: 3px 8px;
+    }
+    .phase-yellow { color: #a07800; border: 1px solid #a07800; }
+    .phase-green  { color: #1a8c3a; border: 1px solid #1a8c3a; }
+    .phase-blue   { color: #1a5a9a; border: 1px solid #1a5a9a; }
+    .service-grid {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 12px;
+    }
+    .kit-grid { grid-template-columns: repeat(2, 1fr); }
+    .service-card {
+      border: 1px solid #e0dbd4;
+      padding: 16px 18px;
+      display: flex;
+      align-items: flex-start;
+      gap: 16px;
+    }
+    .svc-icon-box {
+      width: 46px;
+      height: 46px;
+      border: 1px solid #dbd7d0;
+      background: #f2f0ec;
+      display: flex;
+      align-items: center;
+      justify-content: center;
       flex-shrink: 0;
-      color: #1a1a1a;
     }
-    .skill-desc {
-      font-size: 14px;
-      color: #666;
-    }
+    .svc-icon-box svg { width: 24px; height: 24px; color: #7a7268; }
+    .svc-text { flex: 1; }
+    .svc-name { font-size: 14px; font-weight: 700; color: #1a1a1a; margin-bottom: 4px; }
+    .svc-note  { font-size: 12px; color: #b0a898; }
+    .phase-sep { margin-top: 0; }
 
     /* ── Contact ─────────────────────────────────── */
     .contact-details { max-width: 480px; }
@@ -372,6 +389,7 @@
       .about-photo-placeholder, .about-photo { width: 100%; height: 220px; }
       .footer-inner { padding: 20px 22px; flex-direction: column; gap: 10px; text-align: center; }
       .credits-table td:first-child { min-width: unset; }
+      .service-grid, .kit-grid { grid-template-columns: repeat(2, 1fr); }
       .game-link { display: none; }
     }
   </style>
@@ -395,7 +413,7 @@
     <div class="tab-bar">
       <button type="button" class="tab active" data-tab="about">About</button>
       <button type="button" class="tab" data-tab="credits">Credits</button>
-      <button type="button" class="tab" data-tab="skills">Kit</button>
+      <button type="button" class="tab" data-tab="skills">Services</button>
       <button type="button" class="tab" data-tab="gallery">Gallery</button>
       <button type="button" class="tab" data-tab="contact">Contact</button>
       <a href="game.html" class="game-link">Play: Continuity!</a>
@@ -495,16 +513,228 @@
     </section>
 
     <section id="skills" class="panel">
-      <p class="slug">INT. KIT — DAY</p>
-      <div class="skills-list">
-        <div class="skill-row">
-          <span class="skill-name">ScriptE</span>
-          <span class="skill-desc">Digital continuity software — supported on set</span>
+      <p class="slug">INT. SERVICES — DAY</p>
+
+      <div class="service-phase">
+        <p class="phase-label"><span class="phase-tag phase-yellow">Pre-Production</span></p>
+        <div class="service-grid">
+
+          <div class="service-card">
+            <div class="svc-icon-box">
+              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                <rect x="4" y="2" width="16" height="20" rx="1"/>
+                <line x1="8" y1="7" x2="16" y2="7"/>
+                <line x1="8" y1="11" x2="16" y2="11"/>
+                <line x1="8" y1="15" x2="13" y2="15"/>
+                <line x1="8" y1="19" x2="11" y2="19"/>
+              </svg>
+            </div>
+            <div class="svc-text">
+              <p class="svc-name">Script Breakdown</p>
+              <p class="svc-note">A complete scene-by-scene analysis</p>
+            </div>
+          </div>
+
+          <div class="service-card">
+            <div class="svc-icon-box">
+              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                <circle cx="12" cy="12" r="9"/>
+                <line x1="12" y1="7" x2="12" y2="12"/>
+                <line x1="12" y1="12" x2="16" y2="14"/>
+              </svg>
+            </div>
+            <div class="svc-text">
+              <p class="svc-name">Pre-Timing</p>
+              <p class="svc-note">Optional scene-by-scene timings</p>
+            </div>
+          </div>
+
+          <div class="service-card">
+            <div class="svc-icon-box">
+              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                <circle cx="12" cy="8" r="4"/>
+                <path d="M4 20c0-4 3.6-7 8-7s8 3 8 7"/>
+                <line x1="18" y1="6" x2="22" y2="6"/>
+                <line x1="20" y1="4" x2="20" y2="8"/>
+              </svg>
+            </div>
+            <div class="svc-text">
+              <p class="svc-name">Pre-Shoot Discussion</p>
+              <p class="svc-note">Solve problems before they arise</p>
+            </div>
+          </div>
+
         </div>
-        <div class="skill-row">
-          <span class="skill-name">Paper &amp; Pencil</span>
-          <span class="skill-desc">Traditional notes, breakdown sheets, and lined script</span>
+      </div>
+
+      <div class="service-phase">
+        <p class="phase-label"><span class="phase-tag phase-green">On Set</span></p>
+        <div class="service-grid">
+
+          <div class="service-card">
+            <div class="svc-icon-box">
+              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                <rect x="1" y="3" width="6" height="6" rx="0.5"/>
+                <rect x="1" y="15" width="6" height="6" rx="0.5"/>
+                <rect x="17" y="3" width="6" height="6" rx="0.5"/>
+                <rect x="17" y="15" width="6" height="6" rx="0.5"/>
+                <path d="M7 18 L12 18 L12 6 L17 6"/>
+                <polyline points="15,4 17,6 15,8"/>
+              </svg>
+            </div>
+            <div class="svc-text">
+              <p class="svc-name">On-Set Continuity</p>
+              <p class="svc-note">Match action, dialogue, and everything in between</p>
+            </div>
+          </div>
+
+          <div class="service-card">
+            <div class="svc-icon-box">
+              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                <!-- Left page: table -->
+                <rect x="1" y="2" width="10" height="20" rx="0.5"/>
+                <line x1="5" y1="2"  x2="5"  y2="22"/>
+                <line x1="1" y1="7"  x2="11" y2="7"/>
+                <line x1="1" y1="12" x2="11" y2="12"/>
+                <line x1="1" y1="17" x2="11" y2="17"/>
+                <!-- Right page: writing -->
+                <rect x="13" y="2" width="10" height="20" rx="0.5"/>
+                <line x1="15" y1="7"  x2="21" y2="7"/>
+                <line x1="15" y1="10" x2="21" y2="10"/>
+                <line x1="15" y1="13" x2="21" y2="13"/>
+                <line x1="15" y1="16" x2="21" y2="16"/>
+                <line x1="15" y1="19" x2="19" y2="19"/>
+              </svg>
+            </div>
+            <div class="svc-text">
+              <p class="svc-name">Facing Pages</p>
+              <p class="svc-note">Detailed take-by-take notes</p>
+            </div>
+          </div>
+
+          <div class="service-card">
+            <div class="svc-icon-box">
+              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                <rect x="5" y="3" width="14" height="18" rx="1"/>
+                <line x1="9" y1="3" x2="9" y2="7"/>
+                <line x1="15" y1="3" x2="15" y2="7"/>
+                <line x1="8" y1="11" x2="16" y2="11"/>
+                <line x1="8" y1="14" x2="16" y2="14"/>
+                <line x1="8" y1="17" x2="12" y2="17"/>
+              </svg>
+            </div>
+            <div class="svc-text">
+              <p class="svc-name">Editor's Log</p>
+              <p class="svc-note">Daily report in shooting order</p>
+            </div>
+          </div>
+
+          <div class="service-card">
+            <div class="svc-icon-box">
+              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                <rect x="4" y="2" width="16" height="20" rx="1"/>
+                <line x1="8" y1="17" x2="8" y2="10"/>
+                <line x1="12" y1="17" x2="12" y2="7"/>
+                <line x1="16" y1="17" x2="16" y2="13"/>
+              </svg>
+            </div>
+            <div class="svc-text">
+              <p class="svc-name">Topsheet</p>
+              <p class="svc-note">Daily report with key production information</p>
+            </div>
+          </div>
+
+          <div class="service-card">
+            <div class="svc-icon-box">
+              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                <rect x="3" y="2" width="18" height="20" rx="1"/>
+                <!-- Straight vertical line -->
+                <line x1="10" y1="4" x2="10" y2="20"/>
+                <!-- Squiggly vertical line -->
+                <path d="M15 4 C17 7 13 10 15 13 C17 16 13 19 15 21"/>
+              </svg>
+            </div>
+            <div class="svc-text">
+              <p class="svc-name">Lined Script</p>
+              <p class="svc-note">Digital or hand drawn</p>
+            </div>
+          </div>
+
+          <div class="service-card">
+            <div class="svc-icon-box">
+              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+                <rect x="4" y="2" width="16" height="20" rx="1"/>
+                <line x1="8" y1="8" x2="16" y2="8"/>
+                <line x1="12" y1="13" x2="12" y2="19"/>
+                <line x1="9" y1="16" x2="15" y2="16"/>
+              </svg>
+            </div>
+            <div class="svc-text">
+              <p class="svc-name">As-Shot Script</p>
+              <p class="svc-note">Accurate and up-to-date dialogue</p>
+            </div>
+          </div>
+
         </div>
+      </div>
+
+      <p class="phase-label phase-sep"><span class="phase-tag phase-blue">Kit</span></p>
+      <div class="service-grid kit-grid">
+
+        <div class="service-card">
+          <div class="svc-icon-box">
+            <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+              <text x="12" y="18" text-anchor="middle" font-family="'Courier Prime', Courier, monospace" font-size="20" font-weight="700" fill="currentColor">E</text>
+            </svg>
+          </div>
+          <div class="svc-text">
+            <p class="svc-name">ScriptE</p>
+            <p class="svc-note">The latest digital script supervision software</p>
+          </div>
+        </div>
+
+        <div class="service-card">
+          <div class="svc-icon-box">
+            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+              <path d="M17 3a2.828 2.828 0 114 4L7.5 20.5 3 21l.5-4.5L17 3z"/>
+            </svg>
+          </div>
+          <div class="svc-text">
+            <p class="svc-name">Pen &amp; Paper</p>
+            <p class="svc-note">On-set continuity and notes</p>
+          </div>
+        </div>
+
+        <div class="service-card">
+          <div class="svc-icon-box">
+            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+              <circle cx="12" cy="13" r="8"/>
+              <line x1="12" y1="9" x2="12" y2="13"/>
+              <line x1="12" y1="13" x2="15" y2="15"/>
+              <line x1="9" y1="2" x2="15" y2="2"/>
+              <line x1="12" y1="2" x2="12" y2="5"/>
+            </svg>
+          </div>
+          <div class="svc-text">
+            <p class="svc-name">Stopwatch</p>
+            <p class="svc-note">Keeping track of every second</p>
+          </div>
+        </div>
+
+        <div class="service-card">
+          <div class="svc-icon-box">
+            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
+              <rect x="2" y="4" width="20" height="13" rx="1"/>
+              <line x1="1" y1="20" x2="23" y2="20"/>
+              <line x1="9" y1="17" x2="15" y2="17"/>
+            </svg>
+          </div>
+          <div class="svc-text">
+            <p class="svc-name">MacBook Pro</p>
+            <p class="svc-note">Supporting an efficient digital workflow</p>
+          </div>
+        </div>
+
       </div>
     </section>
 
