Mobile clapper: bg color, A007/47A, Based in Toronto ON wraps

--- a/index.html
+++ b/index.html
@@ -146,9 +146,9 @@
     /* ── Responsive ── */
     @media (max-width: 600px) {
       .home-header { display: none; }
-      body { background: #fff; }
-      main { background: #fff; padding: 0; flex: 1; align-items: stretch; }
-      footer { background: #fff; color: #999; padding: 14px 20px; }
+      body { background: #f7f5f0; }
+      main { background: #f7f5f0; padding: 0; flex: 1; align-items: stretch; }
+      footer { background: #f7f5f0; color: #999; padding: 14px 20px; }
       .monitor-svg { display: none; }
       .stripe { background: repeating-linear-gradient(-45deg, #000 0px, #000 36px, #fff 36px, #fff 72px); height: 44px; border-bottom: 3px solid #000; }
 
@@ -156,7 +156,7 @@
         display: flex;
         flex-direction: column;
         flex: 1;
-        background: #fff;
+        background: #f7f5f0;
         text-decoration: none;
         border-top: 3px solid #111;
       }
@@ -195,7 +195,7 @@
         text-transform: uppercase;
       }
       .clapper-val.amber { color: #c8850e; font-size: 26px; }
-      .clapper-val.small { font-size: 21px; white-space: nowrap; }
+      .clapper-val.small { font-size: 21px; }
       .name-row .clapper-val { font-size: 44px; letter-spacing: -1px; }
 
       .clapper-enter {
@@ -248,18 +248,18 @@
           </div>
           <div class="clapper-cell wide">
             <span class="clapper-label">Location</span>
-            <span class="clapper-val small">Toronto, ON</span>
+            <span class="clapper-val small">Based in Toronto, ON</span>
           </div>
         </div>
 
         <div class="clapper-row">
           <div class="clapper-cell">
             <span class="clapper-label">Roll</span>
-            <span class="clapper-val">A001</span>
+            <span class="clapper-val">A007</span>
           </div>
           <div class="clapper-cell">
             <span class="clapper-label">Scene</span>
-            <span class="clapper-val">17R</span>
+            <span class="clapper-val">47A</span>
           </div>
           <div class="clapper-cell">
             <span class="clapper-label">Take</span>
