--- a/index.html
+++ b/index.html
@@ -217,6 +217,39 @@
       .mobile-clapper:hover .clapper-enter { color: #a86c0a; }
       .mobile-clapper:hover .clapper-enter-btn { border-color: #a86c0a; }
     }
+
+    @media (orientation: landscape) and (max-height: 500px) {
+      .home-header { display: none; }
+      body { background: #f7f5f0; }
+      main { background: #f7f5f0; padding: 0; flex: 1; align-items: stretch; }
+      footer { background: #f7f5f0; color: #999; padding: 8px 20px; }
+      .monitor-svg { display: none; }
+      .stripe { background: repeating-linear-gradient(-45deg, #000 0px, #000 28px, #fff 28px, #fff 56px); height: 28px; border-bottom: 3px solid #000; }
+
+      .mobile-clapper { display: flex; flex-direction: column; flex: 1; background: #f7f5f0; text-decoration: none; border-top: 3px solid #111; }
+      .clapper-stripe-top { display: none; }
+      .clapper-body { display: flex; flex-direction: column; flex: 1; justify-content: flex-start; }
+      .clapper-divider { display: none; }
+
+      .clapper-row { display: flex; min-height: 48px; border-bottom: 3px solid #111; }
+      .clapper-row.name-row { min-height: 60px; }
+      .clapper-row.enter-row { flex: 1; min-height: 40px; border-bottom: none; }
+
+      .clapper-cell { flex: 1; padding: 7px 14px 6px; display: flex; flex-direction: column; justify-content: flex-start; gap: 3px; border-right: 3px solid #111; }
+      .clapper-cell:last-child { border-right: none; }
+      .clapper-cell.wide { flex: 2; }
+
+      .clapper-label { font-size: 9px; font-weight: 700; letter-spacing: 0.18em; color: #888; text-transform: uppercase; }
+      .clapper-val { font-size: 20px; font-weight: 700; color: #111; line-height: 1.1; text-transform: uppercase; }
+      .clapper-val.amber { color: #c8850e; font-size: 18px; }
+      .clapper-val.small { font-size: 15px; }
+      .name-row .clapper-val { letter-spacing: -1px; white-space: nowrap; }
+
+      .clapper-enter { flex: 1; display: flex; align-items: center; padding-top: 0; justify-content: center; font-size: 32px; font-weight: 700; letter-spacing: 8px; color: #c8850e; text-transform: uppercase; }
+      .clapper-enter-btn { border: 3px solid #c8850e; padding: 6px 24px; }
+      .mobile-clapper:hover .clapper-enter { color: #a86c0a; }
+      .mobile-clapper:hover .clapper-enter-btn { border-color: #a86c0a; }
+    }
   </style>
 </head>
 <body>
