--- a/index.html
+++ b/index.html
@@ -228,16 +228,35 @@
 
       .mobile-clapper { display: flex; flex-direction: column; flex: 1; background: #f7f5f0; text-decoration: none; border-top: 3px solid #111; }
       .clapper-stripe-top { display: none; }
-      .clapper-body { display: flex; flex-direction: column; flex: 1; justify-content: flex-start; }
       .clapper-divider { display: none; }
 
-      .clapper-row { display: flex; min-height: 48px; border-bottom: 3px solid #111; }
-      .clapper-row.name-row { min-height: 60px; }
-      .clapper-row.enter-row { flex: 1; min-height: 40px; border-bottom: none; }
+      /* Two-column grid: name on left, rows on right */
+      .clapper-body {
+        display: grid;
+        grid-template-columns: 2fr 3fr;
+        grid-template-rows: auto auto 1fr;
+        flex: 1;
+      }
+      .clapper-row.name-row {
+        grid-column: 1;
+        grid-row: 1 / 4;
+        display: flex;
+        border-bottom: none;
+        border-right: 3px solid #111;
+        min-height: unset;
+      }
+      .clapper-row:not(.name-row) {
+        grid-column: 2;
+        display: flex;
+        min-height: 48px;
+        border-bottom: 3px solid #111;
+      }
+      .clapper-row.enter-row { border-bottom: none; }
 
-      .clapper-cell { flex: 1; padding: 7px 14px 6px; display: flex; flex-direction: column; justify-content: flex-start; gap: 3px; border-right: 3px solid #111; }
+      .clapper-cell { flex: 1; padding: 8px 14px 6px; display: flex; flex-direction: column; justify-content: flex-start; gap: 3px; border-right: 3px solid #111; }
       .clapper-cell:last-child { border-right: none; }
       .clapper-cell.wide { flex: 2; }
+      .name-row .clapper-cell { justify-content: center; border-right: none; padding: 12px 18px; }
 
       .clapper-label { font-size: 9px; font-weight: 700; letter-spacing: 0.18em; color: #888; text-transform: uppercase; }
       .clapper-val { font-size: 20px; font-weight: 700; color: #111; line-height: 1.1; text-transform: uppercase; }
@@ -245,7 +264,7 @@
       .clapper-val.small { font-size: 15px; }
       .name-row .clapper-val { letter-spacing: -1px; white-space: nowrap; }
 
-      .clapper-enter { flex: 1; display: flex; align-items: center; padding-top: 0; justify-content: center; font-size: 32px; font-weight: 700; letter-spacing: 8px; color: #c8850e; text-transform: uppercase; }
+      .clapper-enter { flex: 1; display: flex; align-items: center; justify-content: center; font-size: 30px; font-weight: 700; letter-spacing: 8px; color: #c8850e; text-transform: uppercase; }
       .clapper-enter-btn { border: 3px solid #c8850e; padding: 6px 24px; }
       .mobile-clapper:hover .clapper-enter { color: #a86c0a; }
       .mobile-clapper:hover .clapper-enter-btn { border-color: #a86c0a; }
