--- a/index.html
+++ b/index.html
@@ -68,14 +68,16 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      padding: 24px 40px 28px;
+      padding: 24px 60px;
     }
 
     /* ── Monitor SVG ── */
     .monitor-svg {
-      width: 100%;
-      max-width: 680px;
-      height: auto;
+      /* Scale with viewport height, fixed margin handled by main padding */
+      /* 310px ≈ stripe + header + footer + 2×24px padding */
+      height: clamp(280px, calc(100vh - 310px), 720px);
+      width: auto;
+      max-width: calc(100vw - 120px);
     }
 
     /* ── Mobile clapperboard ── */
