--- a/index.html
+++ b/index.html
@@ -350,6 +350,11 @@
           <stop offset="78%"  stop-color="#c86818"/>
           <stop offset="100%" stop-color="#f09020"/>
         </linearGradient>
+        <!-- Crescent moon mask -->
+        <mask id="moonMask">
+          <circle cx="152" cy="130" r="22" fill="white"/>
+          <circle cx="164" cy="130" r="20" fill="black"/>
+        </mask>
       </defs>
 
       <!-- ── Monitor housing ── -->
@@ -388,6 +393,12 @@
       <g clip-path="url(#screenClip)">
       <!-- Dusk sky -->
       <rect x="42" y="42" width="596" height="356" fill="url(#skyGrad)"/>
+
+      <!-- Harvest moon glow -->
+      <circle cx="152" cy="130" r="36" fill="#d07010" opacity="0.10"/>
+      <circle cx="152" cy="130" r="28" fill="#e08818" opacity="0.14"/>
+      <!-- Harvest moon crescent -->
+      <circle cx="152" cy="130" r="22" fill="#f5b040" mask="url(#moonMask)"/>
 
       <!-- Horizon glow -->
       <ellipse cx="310" cy="300" rx="320" ry="60" fill="#f08020" opacity="0.35"/>
