Add 2001 monolith to A cam field under harvest moon

--- a/index.html
+++ b/index.html
@@ -404,6 +404,8 @@
           <path d="M42,288 C110,270 200,262 290,268 C360,272 420,260 490,256 C545,253 595,260 638,266 L638,398 L42,398 Z" fill="#2e5228"/>
           <path d="M42,322 C90,304 170,292 250,296 C310,300 365,284 425,280 C472,277 520,283 568,278 C598,275 622,280 638,286 L638,398 L42,398 Z" fill="#223e1c"/>
           <rect x="42" y="358" width="596" height="40" fill="#1a3016"/>
+          <!-- Monolith (2001) — near hill, flat face toward camera -->
+          <rect x="144" y="258" width="12" height="40" fill="#050508"/>
           <circle cx="507" cy="265" r="3" fill="#0a1408"/>
           <rect x="505" y="268" width="4" height="10" fill="#0a1408"/>
           <line x1="502" y1="271" x2="512" y2="270" stroke="#0a1408" stroke-width="2"/>
