--- a/index.html
+++ b/index.html
@@ -264,14 +264,14 @@
       .clapper-cell { flex: 1; padding: 8px 14px 6px; display: flex; flex-direction: column; justify-content: flex-start; gap: 3px; border-right: 3px solid #111; }
       .clapper-cell:last-child { border-right: none; }
       .clapper-cell.wide { flex: 2; }
-      .name-row .clapper-cell { justify-content: center; border-right: none; padding: 12px 18px; }
+      .name-row .clapper-cell { justify-content: flex-start; border-right: none; padding: 12px 18px; }
 
       .clapper-label { font-size: 11px; font-weight: 700; letter-spacing: 0.18em; color: #888; text-transform: uppercase; }
-      .clapper-val { font-size: 26px; font-weight: 700; color: #111; line-height: 1.1; text-transform: uppercase; }
-      .clapper-val.amber { color: #c8850e; font-size: 24px; }
-      .clapper-val.small { font-size: 20px; }
+      .clapper-val { font-size: 28px; font-weight: 700; color: #111; line-height: 1.1; text-transform: uppercase; }
+      .clapper-val.amber { color: #c8850e; font-size: 30px; }
+      .clapper-val.small { font-size: 24px; }
       /* Name: two lines, large — JS fit disabled in landscape */
-      .name-row .clapper-val { font-size: 46px; letter-spacing: -1px; white-space: normal; line-height: 1.0; }
+      .name-row .clapper-val { font-size: 64px; letter-spacing: -1px; white-space: normal; line-height: 1.0; }
 
       .clapper-enter { flex: 1; display: flex; align-items: center; justify-content: center; font-size: 32px; font-weight: 700; letter-spacing: 8px; color: #c8850e; text-transform: uppercase; }
       .clapper-enter-btn { border: 3px solid #c8850e; padding: 6px 24px; }
