--- a/index.html
+++ b/index.html
@@ -267,13 +267,13 @@
       .name-row .clapper-cell { justify-content: flex-start; border-right: none; padding: 12px 18px; }
 
       .clapper-label { font-size: 11px; font-weight: 700; letter-spacing: 0.18em; color: #888; text-transform: uppercase; }
-      .clapper-val { font-size: 28px; font-weight: 700; color: #111; line-height: 1.1; text-transform: uppercase; }
+      .clapper-val { font-size: 24px; font-weight: 700; color: #111; line-height: 1.1; text-transform: uppercase; }
       .clapper-val.amber { color: #c8850e; font-size: 30px; }
       .clapper-val.small { font-size: 24px; }
       /* Name: two lines, large — JS fit disabled in landscape */
       .name-row .clapper-val { font-size: 64px; letter-spacing: -1px; white-space: normal; line-height: 1.0; }
 
-      .clapper-enter { flex: 1; display: flex; align-items: center; justify-content: center; font-size: 32px; font-weight: 700; letter-spacing: 8px; color: #c8850e; text-transform: uppercase; }
+      .clapper-enter { flex: 1; display: flex; align-items: flex-start; padding-top: 14px; justify-content: center; font-size: 32px; font-weight: 700; letter-spacing: 8px; color: #c8850e; text-transform: uppercase; }
       .clapper-enter-btn { border: 3px solid #c8850e; padding: 6px 24px; }
       .mobile-clapper:hover .clapper-enter { color: #a86c0a; }
       .mobile-clapper:hover .clapper-enter-btn { border-color: #a86c0a; }
